--- a/data_preparation/pianoroll/test_breakdown.ipynb
+++ b/data_preparation/pianoroll/test_breakdown.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "b84062ea-e4af-4a09-96cd-e1774db0553f",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,13 @@
     "import os\n",
     "from copy import deepcopy\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from BinaryTokenizer import BinaryTokenizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "23fbcb2e-09c9-4fef-88af-bc17a001dad5",
    "metadata": {},
    "outputs": [],
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "d0dd4b5e-68aa-4364-84ef-80fed6ae9cb7",
    "metadata": {},
    "outputs": [
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "351edc29-7e17-4c42-b785-92ae40d54825",
    "metadata": {},
    "outputs": [],
@@ -62,7 +63,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
+   "id": "56e7f74d-a009-47f8-a45a-2febfb2d2292",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "binaryTokenizer = BinaryTokenizer(num_digits=12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "e31b727d-143c-4343-94ec-b66a1af58e38",
    "metadata": {},
    "outputs": [
@@ -79,7 +90,37 @@
       "72\n",
       "84\n",
       "96\n",
-      "108\n"
+      "108\n",
+      "(384, 12)\n",
+      "(384,)\n",
+      "[   0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "    0    0    0    8  128  128  128  128  128  128  128  128  128  128\n",
+      "  128  128  128  136  128  128  128  128  128  128  128  128  128  128\n",
+      "  128  128  128  132  132  132  132  132  128  128  128  128  128  128\n",
+      "  128  128  128  132  132  132  132  132  132  132  132  132  132  132\n",
+      "  132  132  132  133  129  129  128  128  128  128  128  128  128  128\n",
+      "  128  128  132    4    4    4    4    4    4    4    4    4    4    4\n",
+      "    4    4  133  129  129  129  129  128  128  128  128  128  128  128\n",
+      "  128    0    4    4    4    4    4    4    4    4    4    4    4    4\n",
+      "    4    4 1028 1028 1028 1028    4    4    4    4    4    4    4    4\n",
+      "    0  137  137  137  137  137  137  137  137  137  137  137  137  137\n",
+      "  137  129 1156 1156 1156 1156 1156 1156 1156  132  132  132  132  132\n",
+      "  128    0  513  513  513  513  513  513  513  513  513  513  513  512\n",
+      "  512 2816 2816 2304 2304 2304 2304 2304 2304 2304 2304 2304 2304 2304\n",
+      " 2304 3204 1156  132  132  132  132  132  132  132    4    0    0    0\n",
+      "    0    0    4    4    4    4    4    4    0    4    4    4    4    4\n",
+      "    0    0  128  128  128  128  128  128  128  128  128  128  128  128\n",
+      "    0    0  136  136  128  128  128  128  128  128  128  128  128  128\n",
+      "  128  648  128  128  128  128  128  128  128  128  128  128  128  128\n",
+      "  128  128  132  132  128  128  128  128  128  128  128  128  128  128\n",
+      "  128  132  132  132  132  132  132  132  132  132  132  132  132  132\n",
+      "  132  133  133  132  132  132  132  132  132  132  132  132  132  132\n",
+      "  132  132  132  132  132  132  132  132  132  132  132  132  132  132\n",
+      "  132  132  132  128  128  128  128  128  128  128  128  128  128  128\n",
+      "  128    4    4    4    4    4    4    4    4    4    4    4    4    0\n",
+      " 1028 1028 1028 1028 1028 1028]\n"
      ]
     }
    ],
@@ -96,12 +137,16 @@
     "for i in range(12, 128-12, 12):\n",
     "    print(i)\n",
     "    chroma = np.logical_or(chroma, new_piece.tracks[0].pianoroll[:,i:(i+12)])\n",
-    "chroma[:,-6:] = np.logical_or(chroma[:,-6:], new_piece.tracks[0].pianoroll[:,-6:])"
+    "chroma[:,-6:] = np.logical_or(chroma[:,-6:], new_piece.tracks[0].pianoroll[:,-6:])\n",
+    "print(chroma.shape)\n",
+    "indexed_chroma = binaryTokenizer.transform(chroma)\n",
+    "print(indexed_chroma.shape)\n",
+    "print(indexed_chroma)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "id": "3d1cd239-7848-44db-9b89-2bbff127cba0",
    "metadata": {},
    "outputs": [
@@ -399,8 +444,9 @@
     "        for i in range(12, 128-12, 12):\n",
     "            chroma = np.logical_or(chroma, tmp_pianoroll[:,i:(i+12)])\n",
     "        chroma[:,-6:] = np.logical_or(chroma[:,-6:], tmp_pianoroll[:,-6:])\n",
+    "        indexed_chroma = binaryTokenizer.transform( chroma )\n",
     "        # save npz\n",
-    "        np.savez(f'data/pianorolls/{piece_idx:05}.npz')\n",
+    "        np.savez(f'data/pianorolls/{piece_idx:05}.npz', indexed_chroma=indexed_chroma)\n",
     "        # save midi\n",
     "        new_piece.write(f'data/midis/{piece_idx:05}.mid')\n",
     "        start_idx = end_idx\n",
