running pianoroll tokenization

--- a/data_preparation/pianoroll/test_breakdown.ipynb
+++ b/data_preparation/pianoroll/test_breakdown.ipynb
@@ -25,7 +25,7 @@
     "os.makedirs('data', exist_ok=True)\n",
     "os.makedirs('data/pianorolls', exist_ok=True)\n",
     "os.makedirs('data/midis', exist_ok=True)\n",
-    "os.makedirs('data/tokens', exist_ok=True)"
+    "os.makedirs('data/midi_tokens', exist_ok=True)"
    ]
   },
   {
