pianoroll tokenization experiments

--- a/data_preparation/pianoroll/test_tokenize.ipynb
+++ b/data_preparation/pianoroll/test_tokenize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f2674b74-37b4-4e03-ac4c-76929ac67c6d",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,14 @@
     "from BinaryTokenizer import BinaryTokenizer\n",
     "from miditok import REMI, TokenizerConfig\n",
     "from miditoolkit import MidiFile\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ce0937fd-61a4-4323-8bd5-1b3d022e0d5b",
    "metadata": {},
    "outputs": [],
@@ -43,7 +45,7 @@
     "    \"use_tempos\": USE_TEMPOS,\n",
     "    \"use_time_signatures\": USE_TIME_SIGNATURE,\n",
     "    \"use_programs\": USE_PROGRAMS,\n",
-    "    \"nb_tempos\": NB_TEMPOS,\n",
+    "    \"num_tempos\": NB_TEMPOS,\n",
     "    \"tempo_range\": TEMPO_RANGE,\n",
     "}\n",
     "config = TokenizerConfig(**TOKENIZER_PARAMS)\n",
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "a2d31674-6239-42ae-ac08-91bc76b1d836",
    "metadata": {},
    "outputs": [],
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "1d1fd249-c00c-47a7-a507-579b3b4a32b5",
    "metadata": {},
    "outputs": [
@@ -73,7 +75,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Tokenizing MIDIs (data/midi_tokens): 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████| 252/252 [00:00<00:00, 265.07it/s]\n"
+      "Tokenizing MIDIs (data/midi_tokens):  59%|███████████████████▍             | 225721/382794 [9:49:02<12:51:52,  3.39it/s]"
      ]
     }
    ],
