finding giantmidi problemagtic

--- a/data_preparation/pianoroll/test_tokenize.ipynb
+++ b/data_preparation/pianoroll/test_tokenize.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1d1fd249-c00c-47a7-a507-579b3b4a32b5",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Tokenizing MIDIs (data/midi_tokens):  59%|███████████████████▍             | 225721/382794 [9:49:02<12:51:52,  3.39it/s]"
+      "Tokenizing MIDIs (data/midi_tokens): 100%|███████████████████████████████████| 382794/382794 [16:33:26<00:00,  6.42it/s]\n"
      ]
     }
    ],
