pianorolls to csv

--- a/data_preparation/pianoroll/test_make_dataframe.ipynb
+++ b/data_preparation/pianoroll/test_make_dataframe.ipynb
@@ -75,7 +75,7 @@
     }
    ],
    "source": [
-    "for f in files:\n",
+    "for f in files[:10]:\n",
     "    print(f)\n",
     "    df.loc[df['name'] == f, 'chroma'] = 1\n",
     "    print(df.loc[df['name'] == f])\n",
