--- a/data_preparation/pianoroll/test_make_dataset.ipynb
+++ b/data_preparation/pianoroll/test_make_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "id": "4e31bc57-6973-4cc6-93e1-9aba46c8ac05",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "id": "bd704933-b817-438d-a1d2-be6331e797f2",
    "metadata": {},
    "outputs": [],
@@ -24,9 +24,10 @@
     "import os\n",
     "class ChromaSurfaceDataset(Dataset):\n",
     "    def __init__(self, csv_path):\n",
-    "        self.df = pd.read_csv(csv_path, sep='\\t')\n",
+    "        df = pd.read_csv(csv_path, sep=',')\n",
+    "        self.df_np = df.to_numpy()\n",
     "    def __len__(self):\n",
-    "        return len(self.df.index)\n",
+    "        return len(self.df_np)\n",
     "    def __getitem__(self, idx):\n",
     "        chroma = self.df.iloc[idx]['chromas']\n",
     "        surface = self.df.iloc[idx]['tokens']\n",
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "id": "7da01015-fa2f-42c9-8281-f0376b980485",
    "metadata": {},
    "outputs": [
@@ -73,8 +74,8 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>p00000_t00_s0000</td>\n",
-       "      <td>[array([  0,   0,   0, ..., 355, 355, 355])]</td>\n",
-       "      <td>[array([  4, 146,  23, ...,  59, 104, 118])]</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[4, 146, 23, 104, 124, 54, 104, 121, 62, 104, ...</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -82,8 +83,8 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>p00000_t00_s0001</td>\n",
-       "      <td>[array([355, 355, 355, ...,  34,  34,  34])]</td>\n",
-       "      <td>[array([  4, 137,  23, ...,  62, 104, 121])]</td>\n",
+       "      <td>[355, 355, 355, 355, 355, 355, 355, 355, 355, ...</td>\n",
+       "      <td>[4, 137, 23, 104, 119, 26, 104, 122, 30, 104, ...</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -91,8 +92,8 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>p00000_t00_s0002</td>\n",
-       "      <td>[array([363, 363, 363, ...,   0,   0,   0])]</td>\n",
-       "      <td>[array([  4, 137,  23, ...,  30, 104, 133])]</td>\n",
+       "      <td>[363, 363, 363, 363, 363, 363, 363, 363, 363, ...</td>\n",
+       "      <td>[4, 137, 23, 104, 131, 30, 104, 118, 35, 104, ...</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
@@ -100,8 +101,8 @@
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>p00000_t01_s0000</td>\n",
-       "      <td>[array([   0,    0,    0, ..., 2225, 2225, 222...</td>\n",
-       "      <td>[array([  4, 146,  24, ...,  60, 104, 118])]</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[4, 146, 24, 104, 124, 55, 104, 121, 63, 104, ...</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -109,8 +110,8 @@
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>p00000_t01_s0001</td>\n",
-       "      <td>[array([2225, 2225, 2225, ...,   17,   17,   1...</td>\n",
-       "      <td>[array([  4, 137,  24, ...,  63, 104, 121])]</td>\n",
+       "      <td>[2225, 2225, 2225, 2225, 2225, 2225, 2225, 222...</td>\n",
+       "      <td>[4, 137, 24, 104, 119, 27, 104, 122, 31, 104, ...</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -127,74 +128,56 @@
        "4           4  p00000_t01_s0001   \n",
        "\n",
        "                                             chromas  \\\n",
-       "0       [array([  0,   0,   0, ..., 355, 355, 355])]   \n",
-       "1       [array([355, 355, 355, ...,  34,  34,  34])]   \n",
-       "2       [array([363, 363, 363, ...,   0,   0,   0])]   \n",
-       "3  [array([   0,    0,    0, ..., 2225, 2225, 222...   \n",
-       "4  [array([2225, 2225, 2225, ...,   17,   17,   1...   \n",
+       "0  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "1  [355, 355, 355, 355, 355, 355, 355, 355, 355, ...   \n",
+       "2  [363, 363, 363, 363, 363, 363, 363, 363, 363, ...   \n",
+       "3  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "4  [2225, 2225, 2225, 2225, 2225, 2225, 2225, 222...   \n",
        "\n",
-       "                                         tokens  start    end  \n",
-       "0  [array([  4, 146,  23, ...,  59, 104, 118])]   True  False  \n",
-       "1  [array([  4, 137,  23, ...,  62, 104, 121])]  False  False  \n",
-       "2  [array([  4, 137,  23, ...,  30, 104, 133])]  False   True  \n",
-       "3  [array([  4, 146,  24, ...,  60, 104, 118])]   True  False  \n",
-       "4  [array([  4, 137,  24, ...,  63, 104, 121])]  False  False  "
+       "                                              tokens  start    end  \n",
+       "0  [4, 146, 23, 104, 124, 54, 104, 121, 62, 104, ...   True  False  \n",
+       "1  [4, 137, 23, 104, 119, 26, 104, 122, 30, 104, ...  False  False  \n",
+       "2  [4, 137, 23, 104, 131, 30, 104, 118, 35, 104, ...  False   True  \n",
+       "3  [4, 146, 24, 104, 124, 55, 104, 121, 63, 104, ...   True  False  \n",
+       "4  [4, 137, 24, 104, 119, 27, 104, 122, 31, 104, ...  False  False  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "csv_path = 'data/test_df.csv'\n",
-    "df = pd.read_csv(csv_path, sep='\\t')\n",
+    "df = pd.read_csv(csv_path, sep=',')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "e0b74fad-c56f-4c13-8bb9-9f86c0c8025d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = df.iloc[2]['chromas']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "0c4e6f32-b21b-41e0-bd86-09264bc5bfe2",
+   "execution_count": 30,
+   "id": "d7d59531-671b-4d74-8040-ece4d77f3834",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[array([363, 363, 363, ...,   0,   0,   0])]\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "string index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[49], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(s)\n\u001b[0;32m----> 2\u001b[0m s[\u001b[38;5;241m100\u001b[39m]\n",
-      "\u001b[0;31mIndexError\u001b[0m: string index out of range"
-     ]
+     "data": {
+      "text/plain": [
+       "1044"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(s)\n",
-    "s[100]"
+    "df_np = df.to_numpy()\n",
+    "len(df_np)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "aaf6ccc3-743b-459f-906c-bd839c8aa2fb",
    "metadata": {},
    "outputs": [
@@ -205,7 +188,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[33], line 13\u001b[0m\n\u001b[1;32m      4\u001b[0m sampler \u001b[38;5;241m=\u001b[39m BatchSampler(\n\u001b[1;32m      5\u001b[0m     RandomSampler(dataset),\n\u001b[1;32m      6\u001b[0m     batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m,\n\u001b[1;32m      7\u001b[0m     drop_last\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m      9\u001b[0m loader \u001b[38;5;241m=\u001b[39m DataLoader(\n\u001b[1;32m     10\u001b[0m     dataset,\n\u001b[1;32m     11\u001b[0m     sampler\u001b[38;5;241m=\u001b[39msampler)\n\u001b[0;32m---> 13\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m data \u001b[38;5;129;01min\u001b[39;00m loader:\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28mprint\u001b[39m(data)\n",
+      "Cell \u001b[0;32mIn[6], line 13\u001b[0m\n\u001b[1;32m      4\u001b[0m sampler \u001b[38;5;241m=\u001b[39m BatchSampler(\n\u001b[1;32m      5\u001b[0m     RandomSampler(dataset),\n\u001b[1;32m      6\u001b[0m     batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m,\n\u001b[1;32m      7\u001b[0m     drop_last\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m      9\u001b[0m loader \u001b[38;5;241m=\u001b[39m DataLoader(\n\u001b[1;32m     10\u001b[0m     dataset,\n\u001b[1;32m     11\u001b[0m     sampler\u001b[38;5;241m=\u001b[39msampler)\n\u001b[0;32m---> 13\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m data \u001b[38;5;129;01min\u001b[39;00m loader:\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28mprint\u001b[39m(data)\n",
       "File \u001b[0;32m~/miniconda/envs/torch/lib/python3.11/site-packages/torch/utils/data/dataloader.py:630\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    627\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sampler_iter \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    628\u001b[0m     \u001b[38;5;66;03m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[39;00m\n\u001b[1;32m    629\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reset()  \u001b[38;5;66;03m# type: ignore[call-arg]\u001b[39;00m\n\u001b[0;32m--> 630\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_next_data()\n\u001b[1;32m    631\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_num_yielded \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m    632\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_dataset_kind \u001b[38;5;241m==\u001b[39m _DatasetKind\u001b[38;5;241m.\u001b[39mIterable \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[1;32m    633\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_IterableDataset_len_called \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[1;32m    634\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_num_yielded \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_IterableDataset_len_called:\n",
       "File \u001b[0;32m~/miniconda/envs/torch/lib/python3.11/site-packages/torch/utils/data/dataloader.py:674\u001b[0m, in \u001b[0;36m_SingleProcessDataLoaderIter._next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    672\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_next_data\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    673\u001b[0m     index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_next_index()  \u001b[38;5;66;03m# may raise StopIteration\u001b[39;00m\n\u001b[0;32m--> 674\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_dataset_fetcher\u001b[38;5;241m.\u001b[39mfetch(index)  \u001b[38;5;66;03m# may raise StopIteration\u001b[39;00m\n\u001b[1;32m    675\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pin_memory:\n\u001b[1;32m    676\u001b[0m         data \u001b[38;5;241m=\u001b[39m _utils\u001b[38;5;241m.\u001b[39mpin_memory\u001b[38;5;241m.\u001b[39mpin_memory(data, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pin_memory_device)\n",
       "File \u001b[0;32m~/miniconda/envs/torch/lib/python3.11/site-packages/torch/utils/data/_utils/fetch.py:54\u001b[0m, in \u001b[0;36m_MapDatasetFetcher.fetch\u001b[0;34m(self, possibly_batched_index)\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     53\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset[possibly_batched_index]\n\u001b[0;32m---> 54\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcollate_fn(data)\n",
@@ -233,6 +216,14 @@
     "for data in loader:\n",
     "    print(data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c46cf651-eab2-4067-b380-fc4a6a6b1db2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
