--- a/data_preparation/pianoroll/test_tokenize.ipynb
+++ b/data_preparation/pianoroll/test_tokenize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f2674b74-37b4-4e03-ac4c-76929ac67c6d",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "ce0937fd-61a4-4323-8bd5-1b3d022e0d5b",
    "metadata": {},
    "outputs": [],
@@ -50,6 +50,209 @@
     "}\n",
     "config = TokenizerConfig(**TOKENIZER_PARAMS)\n",
     "tokenizer = REMI(config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "c3d43613-624b-4e89-9e10-9e6270850d78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'pad_id': 0, 'bos_id': 2, 'eos_id': 3, 'mask_id': 1, 'max_len': 0}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'PAD_None': 0,\n",
+       " 'MASK_None': 1,\n",
+       " 'BOS_None': 2,\n",
+       " 'EOS_None': 3,\n",
+       " 'Bar_None': 4,\n",
+       " 'Pitch_21': 5,\n",
+       " 'Pitch_22': 6,\n",
+       " 'Pitch_23': 7,\n",
+       " 'Pitch_24': 8,\n",
+       " 'Pitch_25': 9,\n",
+       " 'Pitch_26': 10,\n",
+       " 'Pitch_27': 11,\n",
+       " 'Pitch_28': 12,\n",
+       " 'Pitch_29': 13,\n",
+       " 'Pitch_30': 14,\n",
+       " 'Pitch_31': 15,\n",
+       " 'Pitch_32': 16,\n",
+       " 'Pitch_33': 17,\n",
+       " 'Pitch_34': 18,\n",
+       " 'Pitch_35': 19,\n",
+       " 'Pitch_36': 20,\n",
+       " 'Pitch_37': 21,\n",
+       " 'Pitch_38': 22,\n",
+       " 'Pitch_39': 23,\n",
+       " 'Pitch_40': 24,\n",
+       " 'Pitch_41': 25,\n",
+       " 'Pitch_42': 26,\n",
+       " 'Pitch_43': 27,\n",
+       " 'Pitch_44': 28,\n",
+       " 'Pitch_45': 29,\n",
+       " 'Pitch_46': 30,\n",
+       " 'Pitch_47': 31,\n",
+       " 'Pitch_48': 32,\n",
+       " 'Pitch_49': 33,\n",
+       " 'Pitch_50': 34,\n",
+       " 'Pitch_51': 35,\n",
+       " 'Pitch_52': 36,\n",
+       " 'Pitch_53': 37,\n",
+       " 'Pitch_54': 38,\n",
+       " 'Pitch_55': 39,\n",
+       " 'Pitch_56': 40,\n",
+       " 'Pitch_57': 41,\n",
+       " 'Pitch_58': 42,\n",
+       " 'Pitch_59': 43,\n",
+       " 'Pitch_60': 44,\n",
+       " 'Pitch_61': 45,\n",
+       " 'Pitch_62': 46,\n",
+       " 'Pitch_63': 47,\n",
+       " 'Pitch_64': 48,\n",
+       " 'Pitch_65': 49,\n",
+       " 'Pitch_66': 50,\n",
+       " 'Pitch_67': 51,\n",
+       " 'Pitch_68': 52,\n",
+       " 'Pitch_69': 53,\n",
+       " 'Pitch_70': 54,\n",
+       " 'Pitch_71': 55,\n",
+       " 'Pitch_72': 56,\n",
+       " 'Pitch_73': 57,\n",
+       " 'Pitch_74': 58,\n",
+       " 'Pitch_75': 59,\n",
+       " 'Pitch_76': 60,\n",
+       " 'Pitch_77': 61,\n",
+       " 'Pitch_78': 62,\n",
+       " 'Pitch_79': 63,\n",
+       " 'Pitch_80': 64,\n",
+       " 'Pitch_81': 65,\n",
+       " 'Pitch_82': 66,\n",
+       " 'Pitch_83': 67,\n",
+       " 'Pitch_84': 68,\n",
+       " 'Pitch_85': 69,\n",
+       " 'Pitch_86': 70,\n",
+       " 'Pitch_87': 71,\n",
+       " 'Pitch_88': 72,\n",
+       " 'Pitch_89': 73,\n",
+       " 'Pitch_90': 74,\n",
+       " 'Pitch_91': 75,\n",
+       " 'Pitch_92': 76,\n",
+       " 'Pitch_93': 77,\n",
+       " 'Pitch_94': 78,\n",
+       " 'Pitch_95': 79,\n",
+       " 'Pitch_96': 80,\n",
+       " 'Pitch_97': 81,\n",
+       " 'Pitch_98': 82,\n",
+       " 'Pitch_99': 83,\n",
+       " 'Pitch_100': 84,\n",
+       " 'Pitch_101': 85,\n",
+       " 'Pitch_102': 86,\n",
+       " 'Pitch_103': 87,\n",
+       " 'Pitch_104': 88,\n",
+       " 'Pitch_105': 89,\n",
+       " 'Pitch_106': 90,\n",
+       " 'Pitch_107': 91,\n",
+       " 'Pitch_108': 92,\n",
+       " 'Velocity_5': 93,\n",
+       " 'Velocity_10': 94,\n",
+       " 'Velocity_15': 95,\n",
+       " 'Velocity_21': 96,\n",
+       " 'Velocity_26': 97,\n",
+       " 'Velocity_31': 98,\n",
+       " 'Velocity_37': 99,\n",
+       " 'Velocity_42': 100,\n",
+       " 'Velocity_47': 101,\n",
+       " 'Velocity_52': 102,\n",
+       " 'Velocity_58': 103,\n",
+       " 'Velocity_63': 104,\n",
+       " 'Velocity_68': 105,\n",
+       " 'Velocity_74': 106,\n",
+       " 'Velocity_79': 107,\n",
+       " 'Velocity_84': 108,\n",
+       " 'Velocity_89': 109,\n",
+       " 'Velocity_95': 110,\n",
+       " 'Velocity_100': 111,\n",
+       " 'Velocity_105': 112,\n",
+       " 'Velocity_111': 113,\n",
+       " 'Velocity_116': 114,\n",
+       " 'Velocity_121': 115,\n",
+       " 'Velocity_127': 116,\n",
+       " 'Duration_0.1.8': 117,\n",
+       " 'Duration_0.2.8': 118,\n",
+       " 'Duration_0.3.8': 119,\n",
+       " 'Duration_0.4.8': 120,\n",
+       " 'Duration_0.5.8': 121,\n",
+       " 'Duration_0.6.8': 122,\n",
+       " 'Duration_0.7.8': 123,\n",
+       " 'Duration_1.0.4': 124,\n",
+       " 'Duration_1.1.4': 125,\n",
+       " 'Duration_1.2.4': 126,\n",
+       " 'Duration_1.3.4': 127,\n",
+       " 'Duration_2.0.2': 128,\n",
+       " 'Duration_2.1.2': 129,\n",
+       " 'Duration_3.0.2': 130,\n",
+       " 'Duration_3.1.2': 131,\n",
+       " 'Duration_4.0.1': 132,\n",
+       " 'Duration_5.0.1': 133,\n",
+       " 'Duration_6.0.1': 134,\n",
+       " 'Duration_7.0.1': 135,\n",
+       " 'Duration_8.0.1': 136,\n",
+       " 'Position_0': 137,\n",
+       " 'Position_1': 138,\n",
+       " 'Position_2': 139,\n",
+       " 'Position_3': 140,\n",
+       " 'Position_4': 141,\n",
+       " 'Position_5': 142,\n",
+       " 'Position_6': 143,\n",
+       " 'Position_7': 144,\n",
+       " 'Position_8': 145,\n",
+       " 'Position_9': 146,\n",
+       " 'Position_10': 147,\n",
+       " 'Position_11': 148,\n",
+       " 'Position_12': 149,\n",
+       " 'Position_13': 150,\n",
+       " 'Position_14': 151,\n",
+       " 'Position_15': 152,\n",
+       " 'Position_16': 153,\n",
+       " 'Position_17': 154,\n",
+       " 'Position_18': 155,\n",
+       " 'Position_19': 156,\n",
+       " 'Position_20': 157,\n",
+       " 'Position_21': 158,\n",
+       " 'Position_22': 159,\n",
+       " 'Position_23': 160,\n",
+       " 'Position_24': 161,\n",
+       " 'Position_25': 162,\n",
+       " 'Position_26': 163,\n",
+       " 'Position_27': 164,\n",
+       " 'Position_28': 165,\n",
+       " 'Position_29': 166,\n",
+       " 'Position_30': 167,\n",
+       " 'Position_31': 168}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenization_info = {}\n",
+    "tokenization_info['pad_id'] = tokenizer._tokens_to_ids(['PAD_None'])[0]\n",
+    "tokenization_info['bos_id'] = tokenizer._tokens_to_ids(['BOS_None'])[0]\n",
+    "tokenization_info['eos_id'] = tokenizer._tokens_to_ids(['EOS_None'])[0]\n",
+    "tokenization_info['mask_id'] = tokenizer._tokens_to_ids(['MASK_None'])[0]\n",
+    "tokenization_info['max_len'] = 0\n",
+    "print(tokenization_info)\n",
+    "tokenizer.vocab"
    ]
   },
   {
